[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/Fondo_Inicio.gd" type="Script" id=1]
[ext_resource path="res://Dibujos/Montaña 1.png" type="Texture" id=2]
[ext_resource path="res://Dibujos/Montaña 2.png" type="Texture" id=3]
[ext_resource path="res://Dibujos/FONDO-CIELO.png" type="Texture" id=4]
[ext_resource path="res://Dibujos/Sol.png" type="Texture" id=5]
[ext_resource path="res://Dibujos/Arbustos.png" type="Texture" id=6]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite5" type="Sprite" parent="."]
position = Vector2( 0, -1000 )
scale = Vector2( 8, 8 )
texture = ExtResource( 4 )
centered = false

[node name="Sprite6" type="Sprite" parent="."]
position = Vector2( -194.78, -38.956 )
scale = Vector2( 8, 8 )
texture = ExtResource( 5 )
centered = false

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 8, 8 )
texture = ExtResource( 2 )
centered = false

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 2048, 0 )
scale = Vector2( 8, 8 )
texture = ExtResource( 2 )
centered = false

[node name="Sprite3" type="Sprite" parent="."]
scale = Vector2( 8, 8 )
texture = ExtResource( 3 )
centered = false

[node name="Sprite4" type="Sprite" parent="."]
position = Vector2( 2048, 0 )
scale = Vector2( 8, 8 )
texture = ExtResource( 3 )
centered = false

[node name="Sprite7" type="Sprite" parent="."]
scale = Vector2( 8, 8 )
texture = ExtResource( 6 )
centered = false

[node name="Sprite8" type="Sprite" parent="."]
position = Vector2( 2048, 0 )
scale = Vector2( 8, 8 )
texture = ExtResource( 6 )
centered = false
